{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 25,
  "lineage": "03ee74be-9858-b12e-272b-497c9e6ba741",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09293ee39051c985e",
            "arn": "arn:aws:ec2:us-east-1:535002894012:elastic-ip/eipalloc-09293ee39051c985e",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d81d1b799b50ec04",
            "domain": "vpc",
            "id": "eipalloc-09293ee39051c985e",
            "instance": "i-0c5673a86bf2c6f54",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bba4697397def830",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-87-79-210.compute-1.amazonaws.com",
            "public_ip": "52.87.79.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.networkinterface",
            "aws_security_group.allowweb",
            "aws_subnet.main-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01816d07b1128cd2d",
            "arn": "arn:aws:ec2:us-east-1:535002894012:instance/i-0c5673a86bf2c6f54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5673a86bf2c6f54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bba4697397def830"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bba4697397def830",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "52.87.79.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06fb5d55c23543739",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01689394895019f1c",
            "tags": {
              "name": "web-server"
            },
            "tags_all": {
              "name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d89323768f0bf5df"
            ]
          },
          "dependencies": [
            "aws_network_interface.networkinterface",
            "aws_security_group.allowweb",
            "aws_subnet.main-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:internet-gateway/igw-0f8a89d1890d82b7e",
            "id": "igw-0f8a89d1890d82b7e",
            "owner_id": "535002894012",
            "tags": {
              "name": "maingateway"
            },
            "tags_all": {
              "name": "maingateway"
            },
            "vpc_id": "vpc-0ca030767bbd9bb7c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "networkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:network-interface/eni-0bba4697397def830",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae1beea34456f7d3",
                "device_index": 0,
                "instance": "i-0c5673a86bf2c6f54"
              }
            ],
            "id": "eni-0bba4697397def830",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:e5:19:48:53",
            "owner_id": "535002894012",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d89323768f0bf5df"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01689394895019f1c"
          },
          "dependencies": [
            "aws_security_group.allowweb",
            "aws_subnet.main-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:route-table/rtb-0448212c61a7c54b2",
            "id": "rtb-0448212c61a7c54b2",
            "owner_id": "535002894012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8a89d1890d82b7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mainroutetable"
            },
            "tags_all": {
              "Name": "mainroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca030767bbd9bb7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4cc91c79e3ac285",
            "route_table_id": "rtb-0448212c61a7c54b2",
            "subnet_id": "subnet-01689394895019f1c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main-route-table",
            "aws_subnet.main-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:security-group/sg-0d89323768f0bf5df",
            "description": "allow HTTPS in and SSH in",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d89323768f0bf5df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_all_HTTPS",
            "name_prefix": "",
            "owner_id": "535002894012",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allowaccess"
            },
            "tags_all": {
              "name": "allowaccess"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca030767bbd9bb7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:subnet/subnet-01689394895019f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01689394895019f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535002894012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "mainsubnet"
            },
            "tags_all": {
              "name": "mainsubnet"
            },
            "vpc_id": "vpc-0ca030767bbd9bb7c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:vpc/vpc-0ca030767bbd9bb7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00190af9f3a2fd1be",
            "default_route_table_id": "rtb-0c72859c1473a7104",
            "default_security_group_id": "sg-0f69e7d8711a3f674",
            "dhcp_options_id": "dopt-016715e035adf718d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca030767bbd9bb7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c72859c1473a7104",
            "owner_id": "535002894012",
            "tags": {
              "name": "mainvpc"
            },
            "tags_all": {
              "name": "mainvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_trafficipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:security-group-rule/sgr-09fd362ed753792ef",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-09fd362ed753792ef",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d89323768f0bf5df",
            "security_group_rule_id": "sgr-09fd362ed753792ef",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allowweb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allowhttps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:security-group-rule/sgr-0fa4f4e5e4b8e76d4",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "allow https",
            "from_port": 443,
            "id": "sgr-0fa4f4e5e4b8e76d4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d89323768f0bf5df",
            "security_group_rule_id": "sgr-0fa4f4e5e4b8e76d4",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allowweb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535002894012:security-group-rule/sgr-08a5ac18fb8bbf313",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allows ssh",
            "from_port": 22,
            "id": "sgr-08a5ac18fb8bbf313",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d89323768f0bf5df",
            "security_group_rule_id": "sgr-08a5ac18fb8bbf313",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allowweb",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}